--- a/functions/server/styles/plant.scss
+++ b/functions/server/styles/plant.scss
@@ -3,6 +3,7 @@
   > #miniature {
     padding-top: 15px;
     padding-bottom: 15px;
+    display: flex;
 
     > img {
       width: 100%;
@@ -30,6 +31,10 @@
     > h2 {
       font-weight: 200;
       margin-left: 30px;
+      text-transform: lowercase;
+      font-size: 1.6rem;
+      letter-spacing: 2px;
+      margin-top: 4px;
     }
   }
 }
