--- a/functions/server/styles/plant/rank-bar.scss
+++ b/functions/server/styles/plant/rank-bar.scss
@@ -6,8 +6,16 @@
 
   > .rank-item {
 
+    > h4 {
+      text-transform: uppercase;
+      font-weight: 200;
+      letter-spacing: 1px;
+      font-size: 1rem;
+    }
+
     > h3 {
-      font-size: 1.5rem;
+      text-transform: uppercase;
+      font-size: 1.25rem;
 
       > a {
         color: black;
@@ -18,18 +26,12 @@
         text-transform: uppercase;
         background: black;
         color: white;
-        width: fit-content;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
         padding: 8px;
         margin-top: 8px;
       }
-    }
-
-    > h4 {
-      text-transform: uppercase;
-      font-weight: 200;
-      font-size: 1.2rem;
     }
   }
 }
