--- a/public/styles/plant.css
+++ b/public/styles/plant.css
@@ -1,6 +1,7 @@
 #plant > #miniature {
   padding-top: 15px;
-  padding-bottom: 15px; }
+  padding-bottom: 15px;
+  display: flex; }
   #plant > #miniature > img {
     width: 100%;
     object-fit: cover; }
@@ -14,8 +15,14 @@
     margin-bottom: -2px;
     padding-bottom: 15px;
     margin-top: 40px; }
+    #plant > #description #rank-bar > .rank-item > h4 {
+      text-transform: uppercase;
+      font-weight: 200;
+      letter-spacing: 1px;
+      font-size: 1rem; }
     #plant > #description #rank-bar > .rank-item > h3 {
-      font-size: 1.5rem; }
+      text-transform: uppercase;
+      font-size: 1.25rem; }
       #plant > #description #rank-bar > .rank-item > h3 > a {
         color: black; }
       #plant > #description #rank-bar > .rank-item > h3.current-rank {
@@ -23,14 +30,11 @@
         text-transform: uppercase;
         background: black;
         color: white;
-        width: fit-content;
+        width: 100%;
         margin-left: auto;
         margin-right: auto;
-        padding: 8px; }
-    #plant > #description #rank-bar > .rank-item > h4 {
-      text-transform: uppercase;
-      font-weight: 200;
-      font-size: 1.2rem; }
+        padding: 8px;
+        margin-top: 8px; }
   #plant > #description > h1 {
     text-transform: uppercase;
     background: black;
@@ -41,4 +45,8 @@
     word-break: break-all; }
   #plant > #description > h2 {
     font-weight: 200;
-    margin-left: 30px; }
+    margin-left: 30px;
+    text-transform: lowercase;
+    font-size: 1.6rem;
+    letter-spacing: 2px;
+    margin-top: 4px; }
