--- a/functions/client/styles/app-bar.scss
+++ b/functions/client/styles/app-bar.scss
@@ -54,10 +54,44 @@
       padding-top: 70px;
       line-height: 2.5rem;
     }
+
+    > #search-entry {
+      margin-top: 80px;
+      display: flex;
+      justify-content: center;
+
+      > input.form-control {
+        max-width: calc(50vh - 100px);
+        border-radius: 0;
+        border: 0;
+        border-bottom: white 1px solid;
+        background: none;
+        color: white;
+
+        &:focus {
+          box-shadow: none;
+        }
+
+        &::placeholder {
+          color: white;
+        }
+      }
+
+      > .input-group-append {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+
+        > svg {
+          fill: white;
+        }
+      }
+    }
   }
 
   > #menu {
     justify-content: center;
+    width: 100vw;
 
     > button {
       background: none;
@@ -66,6 +100,7 @@
       text-transform: uppercase;
       letter-spacing: 5px;
       font-weight: 700;
+      padding-left: 35px;
     }
   }
 }
