--- a/functions/client/styles/app-bar.scss
+++ b/functions/client/styles/app-bar.scss
@@ -61,7 +61,7 @@
       justify-content: center;
 
       > input.form-control {
-        max-width: calc(50vh - 100px);
+        max-width: calc(30vw + 100px);
         border-radius: 0;
         border: 0;
         border-bottom: white 1px solid;
