--- a/public/modules/styles/app-bar.css
+++ b/public/modules/styles/app-bar.css
@@ -48,7 +48,7 @@
       display: flex;
       justify-content: center; }
       #app-bar > #logo > #search-entry > input.form-control {
-        max-width: calc(50vh - 100px);
+        max-width: calc(30vw + 100px);
         border-radius: 0;
         border: 0;
         border-bottom: white 1px solid;
@@ -74,4 +74,4 @@
       text-transform: uppercase;
       letter-spacing: 5px;
       font-weight: 700;
-      padding-left: 32px; }
+      padding-left: 35px; }
