--- a/functions/server/styles/plant/rank-bar.scss
+++ b/functions/server/styles/plant/rank-bar.scss
@@ -1,10 +1,23 @@
 #rank-bar {
   text-align: center;
-  margin-bottom: -2px;
-  padding-bottom: 15px;
-  margin-top: 40px;
 
   > .rank-item {
+    padding-bottom: 15px;
+    padding-top: 15px;
+
+    &.current-rank {
+
+      h3 {
+        margin-bottom: 0;
+        height: 100%;
+        font-size: 1.75rem;
+        text-transform: uppercase;
+        background: black;
+        color: white;
+        width: 100%;
+        padding: 13px 8px 8px 8px;
+      }
+    }
 
     > h4 {
       text-transform: uppercase;
@@ -19,18 +32,6 @@
 
       > a {
         color: black;
-      }
-
-      &.current-rank {
-        font-size: 1.75rem;
-        text-transform: uppercase;
-        background: black;
-        color: white;
-        width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 8px;
-        margin-top: 8px;
       }
     }
   }
