--- a/public/styles/plant.css
+++ b/public/styles/plant.css
@@ -11,30 +11,29 @@
   flex-direction: column;
   justify-content: flex-end; }
   #plant > #description #rank-bar {
-    text-align: center;
-    margin-bottom: -2px;
-    padding-bottom: 15px;
-    margin-top: 40px; }
-    #plant > #description #rank-bar > .rank-item > h4 {
-      text-transform: uppercase;
-      font-weight: 200;
-      letter-spacing: 1px;
-      font-size: 1rem; }
-    #plant > #description #rank-bar > .rank-item > h3 {
-      text-transform: uppercase;
-      font-size: 1.25rem; }
-      #plant > #description #rank-bar > .rank-item > h3 > a {
-        color: black; }
-      #plant > #description #rank-bar > .rank-item > h3.current-rank {
+    text-align: center; }
+    #plant > #description #rank-bar > .rank-item {
+      padding-bottom: 15px;
+      padding-top: 15px; }
+      #plant > #description #rank-bar > .rank-item.current-rank h3 {
+        margin-bottom: 0;
+        height: 100%;
         font-size: 1.75rem;
         text-transform: uppercase;
         background: black;
         color: white;
         width: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        padding: 8px;
-        margin-top: 8px; }
+        padding: 13px 8px 8px 8px; }
+      #plant > #description #rank-bar > .rank-item > h4 {
+        text-transform: uppercase;
+        font-weight: 200;
+        letter-spacing: 1px;
+        font-size: 1rem; }
+      #plant > #description #rank-bar > .rank-item > h3 {
+        text-transform: uppercase;
+        font-size: 1.25rem; }
+        #plant > #description #rank-bar > .rank-item > h3 > a {
+          color: black; }
   #plant > #description > h1 {
     text-transform: uppercase;
     background: black;
