--- a/functions/server/styles/plant.scss
+++ b/functions/server/styles/plant.scss
@@ -1,4 +1,5 @@
 #plant {
+  margin-bottom: 10vh;
 
   > #miniature {
     padding-top: 15px;
@@ -37,4 +38,10 @@
       margin-top: 4px;
     }
   }
+}
+
+#data {
+  margin-bottom: 10vh;
+
+  @import './plant/extracts.scss';
 }
