--- a/public/styles/plant.css
+++ b/public/styles/plant.css
@@ -1,51 +1,67 @@
-#plant > #miniature {
-  padding-top: 15px;
-  padding-bottom: 15px;
-  display: flex; }
-  #plant > #miniature > img {
-    width: 100%;
-    object-fit: cover; }
+#plant {
+  margin-bottom: 10vh; }
+  #plant > #miniature {
+    padding-top: 15px;
+    padding-bottom: 15px;
+    display: flex; }
+    #plant > #miniature > img {
+      width: 100%;
+      object-fit: cover; }
+  #plant > #description {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end; }
+    #plant > #description #rank-bar {
+      text-align: center; }
+      #plant > #description #rank-bar > .rank-item {
+        padding-bottom: 15px;
+        padding-top: 15px; }
+        #plant > #description #rank-bar > .rank-item.current-rank h3 {
+          margin-bottom: 0;
+          height: 100%;
+          font-size: 1.75rem;
+          text-transform: uppercase;
+          background: black;
+          color: white;
+          width: 100%;
+          padding: 13px 8px 8px 8px; }
+        #plant > #description #rank-bar > .rank-item > h4 {
+          text-transform: uppercase;
+          font-weight: 200;
+          letter-spacing: 1px;
+          font-size: 1rem; }
+        #plant > #description #rank-bar > .rank-item > h3 {
+          text-transform: uppercase;
+          font-size: 1.25rem; }
+          #plant > #description #rank-bar > .rank-item > h3 > a {
+            color: black; }
+    #plant > #description > h1 {
+      text-transform: uppercase;
+      background: black;
+      width: fit-content;
+      color: white;
+      font-size: 5rem;
+      padding: 10px 25px;
+      word-break: break-all; }
+    #plant > #description > h2 {
+      font-weight: 200;
+      margin-left: 30px;
+      text-transform: lowercase;
+      font-size: 1.6rem;
+      letter-spacing: 2px;
+      margin-top: 4px; }
 
-#plant > #description {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end; }
-  #plant > #description #rank-bar {
-    text-align: center; }
-    #plant > #description #rank-bar > .rank-item {
-      padding-bottom: 15px;
-      padding-top: 15px; }
-      #plant > #description #rank-bar > .rank-item.current-rank h3 {
-        margin-bottom: 0;
-        height: 100%;
-        font-size: 1.75rem;
-        text-transform: uppercase;
-        background: black;
-        color: white;
-        width: 100%;
-        padding: 13px 8px 8px 8px; }
-      #plant > #description #rank-bar > .rank-item > h4 {
-        text-transform: uppercase;
-        font-weight: 200;
-        letter-spacing: 1px;
-        font-size: 1rem; }
-      #plant > #description #rank-bar > .rank-item > h3 {
-        text-transform: uppercase;
-        font-size: 1.25rem; }
-        #plant > #description #rank-bar > .rank-item > h3 > a {
-          color: black; }
-  #plant > #description > h1 {
-    text-transform: uppercase;
-    background: black;
-    width: fit-content;
-    color: white;
-    font-size: 5rem;
-    padding: 10px 25px;
-    word-break: break-all; }
-  #plant > #description > h2 {
-    font-weight: 200;
-    margin-left: 30px;
-    text-transform: lowercase;
-    font-size: 1.6rem;
-    letter-spacing: 2px;
-    margin-top: 4px; }
+#data {
+  margin-bottom: 10vh; }
+  #data #extracts > .card {
+    border-radius: 0; }
+    #data #extracts > .card > .card-body p {
+      font-weight: 200; }
+      #data #extracts > .card > .card-body p > strong {
+        font-weight: 600; }
+    #data #extracts > .card > .card-body > ul {
+      padding-top: 15px;
+      padding-left: 25px; }
+  @media (min-width: 576px) and (max-width: 1100px) {
+    #data #extracts {
+      column-count: 2; } }
