--- a/functions/server/styles/plant/extracts.scss
+++ b/functions/server/styles/plant/extracts.scss
@@ -3,6 +3,17 @@
   > .card {
     border-radius: 0;
 
+    > .card-title {
+      padding: 40px 40px 4px 40px;
+    }
+
+    > .card-subtitle {
+      padding: 0 40px;
+      font-size: 0.8rem;
+      text-transform: uppercase;
+      font-weight: 200;
+    }
+
     > .card-body {
 
       p {
