--- a/functions/server/styles/plant.scss
+++ b/functions/server/styles/plant.scss
@@ -29,13 +29,26 @@
       word-break: break-all;
     }
 
-    > h2 {
-      font-weight: 200;
-      margin-left: 30px;
-      text-transform: lowercase;
-      font-size: 1.6rem;
-      letter-spacing: 2px;
-      margin-top: 4px;
+    > #tool-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      
+      > h2 {
+        font-weight: 200;
+        margin-left: 30px;
+        text-transform: lowercase;
+        font-size: 1.6rem;
+        letter-spacing: 2px;
+        margin-top: 4px;
+      }
+
+      > a {
+        background-color: black;
+        padding: 4px 8px;
+        color: white;
+        text-decoration: none;
+      }
     }
   }
 }
