--- a/public/styles/plant.css
+++ b/public/styles/plant.css
@@ -43,13 +43,22 @@
       font-size: 5rem;
       padding: 10px 25px;
       word-break: break-all; }
-    #plant > #description > h2 {
-      font-weight: 200;
-      margin-left: 30px;
-      text-transform: lowercase;
-      font-size: 1.6rem;
-      letter-spacing: 2px;
-      margin-top: 4px; }
+    #plant > #description > #tool-bar {
+      display: flex;
+      align-items: center;
+      justify-content: space-between; }
+      #plant > #description > #tool-bar > h2 {
+        font-weight: 200;
+        margin-left: 30px;
+        text-transform: lowercase;
+        font-size: 1.6rem;
+        letter-spacing: 2px;
+        margin-top: 4px; }
+      #plant > #description > #tool-bar > a {
+        background-color: black;
+        padding: 4px 8px;
+        color: white;
+        text-decoration: none; }
 
 #data {
   margin-bottom: 10vh; }
@@ -60,7 +69,8 @@
     #data #extracts > .card > .card-subtitle {
       padding: 0 40px;
       font-size: 0.8rem;
-      text-transform: uppercase; }
+      text-transform: uppercase;
+      font-weight: 200; }
     #data #extracts > .card > .card-body p {
       font-weight: 200; }
       #data #extracts > .card > .card-body p > strong {
