fix moz fit content width

--- a/functions/client/styles/contributor.scss
+++ b/functions/client/styles/contributor.scss
@@ -28,6 +28,7 @@
 
     > h3 {
       width: fit-content;
+      width: -moz-fit-content;
       text-transform: uppercase;
       background: black;
       margin: 28px auto;
