--- a/functions/server/styles/plant.scss
+++ b/functions/server/styles/plant.scss
@@ -23,6 +23,7 @@
       text-transform: uppercase;
       background: black;
       width: fit-content;
+      width: -moz-fit-content;
       color: white;
       font-size: 5rem;
       padding: 10px 25px;
