--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,17 +3,20 @@
   #title-link > #title {
     color: black;
     margin: 10vh auto 0 auto;
-    width: fit-content; }
+    width: fit-content;
+    width: -moz-fit-content; }
   #title-link > #subtitle {
     color: black;
     margin: 0 auto 10vh auto;
     width: fit-content;
+    width: -moz-fit-content;
     font-size: 1.4rem;
     text-transform: uppercase;
     font-weight: 200; }
 
 #footer > h3 {
   width: fit-content;
+  width: -moz-fit-content;
   margin: 10px auto;
   font-size: 0.8rem;
   font-weight: 200; }
