--- a/functions/styles/main.scss
+++ b/functions/styles/main.scss
@@ -5,12 +5,14 @@
     color: black;
     margin: 10vh auto 0 auto;
     width: fit-content;
+    width: -moz-fit-content;
   }
   
   > #subtitle {
     color: black;
     margin: 0 auto 10vh auto;
     width: fit-content;
+    width: -moz-fit-content;
     font-size: 1.4rem;
     text-transform: uppercase;
     font-weight: 200;
@@ -21,6 +23,7 @@
 
   > h3 {
     width: fit-content;
+    width: -moz-fit-content;
     margin: 10px auto;
     font-size: 0.8rem;
     font-weight: 200;
