--- a/public/styles/plant.css
+++ b/public/styles/plant.css
@@ -39,6 +39,7 @@
       text-transform: uppercase;
       background: black;
       width: fit-content;
+      width: -moz-fit-content;
       color: white;
       font-size: 5rem;
       padding: 10px 25px;
