--- a/functions/server/styles/plant/rank-bar.scss
+++ b/functions/server/styles/plant/rank-bar.scss
@@ -1,37 +1,40 @@
 #rank-bar {
   text-align: center;
 
-  > .rank-item {
-    padding-bottom: 15px;
-    padding-top: 15px;
+  #rank-hierarchy {    
 
-    &.current-rank {
+    > .rank-item {
+      padding-bottom: 15px;
+      padding-top: 15px;
 
-      h3 {
-        margin-bottom: 0;
-        height: 100%;
-        font-size: 1.75rem;
-        text-transform: uppercase;
-        background: black;
-        color: white;
-        width: 100%;
-        padding: 13px 8px 8px 8px;
+      &.current-rank {
+
+        h3 {
+          margin-bottom: 0;
+          height: 100%;
+          font-size: 1.75rem;
+          text-transform: uppercase;
+          background: black;
+          color: white;
+          width: 100%;
+          padding: 13px 8px 8px 8px;
+        }
       }
-    }
 
-    > h4 {
-      text-transform: uppercase;
-      font-weight: 200;
-      letter-spacing: 1px;
-      font-size: 1rem;
-    }
+      > h4 {
+        text-transform: uppercase;
+        font-weight: 200;
+        letter-spacing: 1px;
+        font-size: 1rem;
+      }
 
-    > h3 {
-      text-transform: uppercase;
-      font-size: 1.25rem;
+      > h3 {
+        text-transform: uppercase;
+        font-size: 1.25rem;
 
-      > a {
-        color: black;
+        > a {
+          color: black;
+        }
       }
     }
   }
