--- a/public/styles/plant.css
+++ b/public/styles/plant.css
@@ -13,10 +13,10 @@
     justify-content: flex-end; }
     #plant > #description #rank-bar {
       text-align: center; }
-      #plant > #description #rank-bar > .rank-item {
+      #plant > #description #rank-bar #rank-hierarchy > .rank-item {
         padding-bottom: 15px;
         padding-top: 15px; }
-        #plant > #description #rank-bar > .rank-item.current-rank h3 {
+        #plant > #description #rank-bar #rank-hierarchy > .rank-item.current-rank h3 {
           margin-bottom: 0;
           height: 100%;
           font-size: 1.75rem;
@@ -25,15 +25,15 @@
           color: white;
           width: 100%;
           padding: 13px 8px 8px 8px; }
-        #plant > #description #rank-bar > .rank-item > h4 {
+        #plant > #description #rank-bar #rank-hierarchy > .rank-item > h4 {
           text-transform: uppercase;
           font-weight: 200;
           letter-spacing: 1px;
           font-size: 1rem; }
-        #plant > #description #rank-bar > .rank-item > h3 {
+        #plant > #description #rank-bar #rank-hierarchy > .rank-item > h3 {
           text-transform: uppercase;
           font-size: 1.25rem; }
-          #plant > #description #rank-bar > .rank-item > h3 > a {
+          #plant > #description #rank-bar #rank-hierarchy > .rank-item > h3 > a {
             color: black; }
     #plant > #description > h1 {
       text-transform: uppercase;
