--- a/functions/server/styles/plant/rank-bar.scss
+++ b/functions/server/styles/plant/rank-bar.scss
@@ -1,23 +1,26 @@
 #rank-bar {
   text-align: center;
 
-  #rank-hierarchy {    
+  > #rank-hierarchy {    
 
     > .rank-item {
       padding-bottom: 15px;
       padding-top: 15px;
 
       &.current-rank {
+        margin-top: 26px;
+        color: white;
+        background: black;
+        margin-top: 0;
 
-        h3 {
-          margin-bottom: 0;
-          height: 100%;
-          font-size: 1.75rem;
-          text-transform: uppercase;
-          background: black;
+        > h3 {
+          margin-top: 26px;
           color: white;
-          width: 100%;
-          padding: 13px 8px 8px 8px;
+        }
+
+        > h6 {
+          color: white;
+          opacity: 0.78;
         }
       }
 
@@ -31,9 +34,50 @@
       > h3 {
         text-transform: uppercase;
         font-size: 1.25rem;
+        margin-bottom: 24px;
 
         > a {
           color: black;
+        }
+      }
+
+      > h6 {
+        font-size: 0.8rem;
+        text-transform: uppercase;
+        cursor: pointer;
+        display: none;
+
+        &.reveal {
+          display: block;
+        }
+      }
+    }
+  }
+
+  > #rank-suggestions {
+    
+    > div {
+      display: none;
+
+      &.reveal {
+        display: block;
+      }
+
+      > h5 {
+        color: white;
+        text-transform: uppercase;        
+        font-size: 1.2rem;        
+        margin-top: 16px;
+        background: black;
+        margin-bottom: 25px;
+        padding: 12px;
+      }
+
+      > .row {
+        
+        > a {
+          color: black;
+          text-transform: uppercase;
         }
       }
     }
