--- a/functions/styles/main.scss
+++ b/functions/styles/main.scss
@@ -1,3 +1,18 @@
+.desktop {
+
+  @media (max-width: 991px) {
+    display: none;
+  }
+}
+
+.mobile {
+  display: none;
+
+  @media (max-width: 991px) {
+    display: initial;
+  }
+}
+
 #title-link {
   text-decoration: none !important;
   
