--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,3 +1,13 @@
+@media (max-width: 991px) {
+  .desktop {
+    display: none; } }
+
+.mobile {
+  display: none; }
+  @media (max-width: 991px) {
+    .mobile {
+      display: initial; } }
+
 #title-link {
   text-decoration: none !important; }
   #title-link > #title {
