--- a/functions/server/styles/plant/rank-bar.scss
+++ b/functions/server/styles/plant/rank-bar.scss
@@ -1,4 +1,6 @@
 #rank-bar {
+  @import './plant/suggestions-group.scss';
+
   text-align: center;
 
   > #rank-hierarchy {
@@ -50,36 +52,6 @@
 
         &.reveal {
           display: block;
-        }
-      }
-    }
-  }
-
-  > #rank-suggestions {
-    
-    > div {
-      padding-top: 13px;
-      display: none;
-
-      &.reveal {
-        display: block;
-      }
-
-      > h5 {
-        border-bottom: solid 1px black;
-        text-transform: uppercase;    font-weight: 300;
-        font-size: 1rem;
-        margin-bottom: 28px;
-        padding: 12px;
-      }
-
-      > .row {
-        margin-bottom: 28px;
-        
-        > a {
-          color: black;
-          text-transform: uppercase;
-          margin-bottom: 4px;
         }
       }
     }
