--- a/public/styles/plant.css
+++ b/public/styles/plant.css
@@ -13,6 +13,31 @@
     justify-content: flex-end; }
     #plant > #description #rank-bar {
       text-align: center; }
+      #plant > #description #rank-bar .suggestions-group {
+        padding-top: 13px; }
+        #plant > #description #rank-bar .suggestions-group.desktop:not(.reveal) {
+          display: none !important; }
+        @media (max-width: 991px) {
+          #plant > #description #rank-bar .suggestions-group.desktop {
+            display: none !important; } }
+        #plant > #description #rank-bar .suggestions-group.mobile {
+          display: none !important; }
+          @media (max-width: 991px) {
+            #plant > #description #rank-bar .suggestions-group.mobile.reveal {
+              display: initial !important; } }
+        #plant > #description #rank-bar .suggestions-group > h5 {
+          border-bottom: solid 1px black;
+          text-transform: uppercase;
+          font-weight: 300;
+          font-size: 1rem;
+          margin-bottom: 28px;
+          padding: 12px; }
+        #plant > #description #rank-bar .suggestions-group > .row {
+          margin-bottom: 28px; }
+          #plant > #description #rank-bar .suggestions-group > .row > a {
+            color: black;
+            text-transform: uppercase;
+            margin-bottom: 4px; }
       #plant > #description #rank-bar > #rank-hierarchy {
         margin-bottom: 12px; }
         #plant > #description #rank-bar > #rank-hierarchy > .rank-item {
@@ -47,24 +72,6 @@
             display: none; }
             #plant > #description #rank-bar > #rank-hierarchy > .rank-item > h6.reveal {
               display: block; }
-      #plant > #description #rank-bar > #rank-suggestions > div {
-        padding-top: 13px;
-        display: none; }
-        #plant > #description #rank-bar > #rank-suggestions > div.reveal {
-          display: block; }
-        #plant > #description #rank-bar > #rank-suggestions > div > h5 {
-          border-bottom: solid 1px black;
-          text-transform: uppercase;
-          font-weight: 300;
-          font-size: 1rem;
-          margin-bottom: 28px;
-          padding: 12px; }
-        #plant > #description #rank-bar > #rank-suggestions > div > .row {
-          margin-bottom: 28px; }
-          #plant > #description #rank-bar > #rank-suggestions > div > .row > a {
-            color: black;
-            text-transform: uppercase;
-            margin-bottom: 4px; }
     #plant > #description > h1 {
       text-transform: uppercase;
       background: black;
