--- a/functions/styles/extract.scss
+++ b/functions/styles/extract.scss
@@ -14,8 +14,14 @@
 
   > .card-body {
 
-    p {
+    p,
+    li {
       font-weight: 200;
+
+      a {
+        font-weight: 400;
+        color: black;
+      }
 
       > strong {
         font-weight: 600;
