--- a/public/styles/plant.css
+++ b/public/styles/plant.css
@@ -6,7 +6,9 @@
     display: flex; }
     #plant > #miniature > img {
       width: 100%;
-      object-fit: cover; }
+      object-fit: cover;
+      background: #EEE;
+      border: #DDD solid 1px; }
   #plant > #description {
     display: flex;
     flex-direction: column;
@@ -100,20 +102,26 @@
 
 #data {
   margin-bottom: 10vh; }
-  #data #extracts > .card {
+  #data #extracts > .extract {
     border-radius: 0; }
-    #data #extracts > .card > .card-title {
+    #data #extracts > .extract > .card-title {
       padding: 40px 40px 4px 40px; }
-    #data #extracts > .card > .card-subtitle {
+    #data #extracts > .extract > .card-subtitle {
       padding: 0 40px;
       font-size: 0.8rem;
       text-transform: uppercase;
       font-weight: 200; }
-    #data #extracts > .card > .card-body p {
+    #data #extracts > .extract > .card-body p,
+    #data #extracts > .extract > .card-body li {
       font-weight: 200; }
-      #data #extracts > .card > .card-body p > strong {
+      #data #extracts > .extract > .card-body p a,
+      #data #extracts > .extract > .card-body li a {
+        font-weight: 400;
+        color: black; }
+      #data #extracts > .extract > .card-body p > strong,
+      #data #extracts > .extract > .card-body li > strong {
         font-weight: 600; }
-    #data #extracts > .card > .card-body > ul {
+    #data #extracts > .extract > .card-body > ul {
       padding-top: 15px;
       padding-left: 25px; }
   @media (min-width: 576px) and (max-width: 1100px) {
