--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,11 +1,23 @@
 #title {
   text-decoration: none !important;
-  color: black; }
+  color: black;
+  margin-top: 40px;
+  margin-bottom: 80px;
+  height: fit-content;
+  height: -moz-fit-content; }
   #title > #title__main {
-    margin: 40px auto 80px;
+    margin: 40px auto 8px;
     font-size: 1.2rem;
     font-weight: 300;
     letter-spacing: 10px;
+    width: fit-content;
+    width: -moz-fit-content; }
+  #title #title__sub {
+    opacity: 0.7;
+    margin: 0 auto 80px;
+    font-size: 1rem;
+    font-weight: 300;
+    letter-spacing: 4px;
     width: fit-content;
     width: -moz-fit-content; }
 
