ajout auth frame menu & disconnect

--- a/functions/client/components/contributor/VerticalLeftMenu/VerticalLeftMenu.scss
+++ b/functions/client/components/contributor/VerticalLeftMenu/VerticalLeftMenu.scss
@@ -1,10 +1,11 @@
 #vertical-left-menu {
+  padding: 40px;
 
   > .vertical-left-menu__tool {
     font-size: 1rem;
     text-transform: uppercase;
     font-weight: 300;
-    opacity: 0.7;
+    opacity: 0.85;
     letter-spacing: 2px;
     cursor: pointer;
 
