--- a/functions/components/Login/Login.scss
+++ b/functions/components/Login/Login.scss
@@ -1,1 +1,24 @@
-@import './AuthFrameMenu/AuthFrameMenu.scss'
+@import './AuthFrameMenu/AuthFrameMenu.scss';
+
+#login-form {
+
+  label {
+    text-transform: uppercase;
+    font-weight: 300;
+    letter-spacing: 4px;
+    font-size: 0.8rem;
+    margin-top: 20px;
+  }
+
+  #login-form__menu {
+    margin-top: 20px;
+    
+    > button {
+      border: 0;
+      text-transform: uppercase;
+      font-size: 0.6rem;
+      letter-spacing: 2px;
+      padding: 12px; 
+    }
+  }
+}
