login: info, recovery, UI polishing

--- a/functions/styles/main.scss
+++ b/functions/styles/main.scss
@@ -1,2 +1,4 @@
-@import './title/title.scss';
-@import './footer/footer.scss';
+@import './main/title/title.scss';
+@import './main/buttons.scss';
+@import './main/forms.scss';
+@import './main/footer/footer.scss';
