--- a/functions/components/Login/Login.scss
+++ b/functions/components/Login/Login.scss
@@ -2,23 +2,15 @@
 
 #login-form {
 
-  label {
+  #login-form__info {
     text-transform: uppercase;
     font-weight: 300;
     letter-spacing: 4px;
-    font-size: 0.8rem;
-    margin-top: 20px;
+    margin-top: 40px;
+    text-align: center;
   }
 
   #login-form__menu {
     margin-top: 20px;
-    
-    > button {
-      border: 0;
-      text-transform: uppercase;
-      font-size: 0.6rem;
-      letter-spacing: 2px;
-      padding: 12px; 
-    }
   }
 }
