--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -21,6 +21,24 @@
     width: fit-content;
     width: -moz-fit-content; }
 
+button.btn-x {
+  border: 0;
+  text-transform: uppercase;
+  font-size: 0.6rem;
+  letter-spacing: 2px;
+  padding: 12px; }
+
+label {
+  text-transform: uppercase;
+  font-weight: 300;
+  letter-spacing: 4px;
+  font-size: 0.8rem;
+  margin-top: 20px; }
+
+input {
+  font-weight: 300;
+  letter-spacing: 2px; }
+
 #footer > h3 {
   width: fit-content;
   width: -moz-fit-content;
