--- a/functions/client/styles/contributor.scss
+++ b/functions/client/styles/contributor.scss
@@ -3,6 +3,7 @@
 #contributor {
 
   @import '../components/contributor/ContributeMenu/ContributeMenu.scss';
+  @import '../components/PlantSearch/PlantSearch.scss';
 
   #contributor__top-menu {
     margin-bottom: 40px;
