--- a/functions/client/styles/contributor.scss
+++ b/functions/client/styles/contributor.scss
@@ -25,6 +25,15 @@
       margin-bottom: 40px;
     }
 
+    .alert {
+      margin-top: 6px;
+
+      > a {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+    }
+
     #contributor__bot-menu {
       margin-top: 40px;
     }
