--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -46,10 +46,34 @@ label {
   font-size: 0.8rem;
   margin-top: 20px; }
 
+button.btn-x.closed {
+  margin-bottom: 0; }
+
+.alert {
+  margin-bottom: 0; }
+  .alert p:last-child {
+    margin-bottom: 0; }
+
 input,
-select {
+select,
+textarea,
+.alert {
   font-weight: 300;
   letter-spacing: 2px; }
+
+.input-group.file-input {
+  margin-bottom: 8px; }
+  .input-group.file-input label {
+    margin-top: 0;
+    height: 40px;
+    font-size: 0.8rem;
+    padding-top: 10px; }
+  .input-group.file-input input.file-input__activator {
+    position: absolute;
+    width: calc(100% - 48px);
+    opacity: 0;
+    height: 100%;
+    cursor: pointer; }
 
 #footer > h3 {
   width: fit-content;
