--- a/functions/styles/main/forms.scss
+++ b/functions/styles/main/forms.scss
@@ -26,8 +26,11 @@ textarea,
   letter-spacing: 2px;
 }
 
-.input-group.file-input {
+.input-group {
   margin-bottom: 8px;
+}
+
+.input-group.file-input {
 
   label {
     margin-top: 0;
