--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -61,19 +61,21 @@ textarea,
   font-weight: 300;
   letter-spacing: 2px; }
 
-.input-group.file-input {
+.input-group {
   margin-bottom: 8px; }
-  .input-group.file-input label {
-    margin-top: 0;
-    height: 40px;
-    font-size: 0.8rem;
-    padding-top: 10px; }
-  .input-group.file-input input.file-input__activator {
-    position: absolute;
-    width: calc(100% - 48px);
-    opacity: 0;
-    height: 100%;
-    cursor: pointer; }
+
+.input-group.file-input label {
+  margin-top: 0;
+  height: 40px;
+  font-size: 0.8rem;
+  padding-top: 10px; }
+
+.input-group.file-input input.file-input__activator {
+  position: absolute;
+  width: calc(100% - 48px);
+  opacity: 0;
+  height: 100%;
+  cursor: pointer; }
 
 #footer > h3 {
   width: fit-content;
