--- a/functions/client/modules/contributor/contributor.scss
+++ b/functions/client/modules/contributor/contributor.scss
@@ -1,5 +1,6 @@
 @import '../../components/Login/Login.scss';
 @import '../../components/PlantSearch/PlantSearch.scss';
+@import '../../components/TagManager/TagManager.scss';
 
 #contributor {
 
