--- a/functions/client/modules/contributor/contributor.scss
+++ b/functions/client/modules/contributor/contributor.scss
@@ -8,13 +8,10 @@
 
   #contributor__top-menu {
     margin-bottom: 40px;
+  }
 
-    > #contributor__back-btn {
-      border: none;
-      text-transform: uppercase;
-      letter-spacing: 4px;
-      font-weight: 300;
-    }
+  #contributor__bot-menu {
+    margin-top: 40px;
   }
 
   #contributor__tool {
