add data w/o value, multi plant search mode

--- a/public/modules/styles/contributor/contributor.css
+++ b/public/modules/styles/contributor/contributor.css
@@ -72,7 +72,7 @@
 
 #contributor #contributor__tool .alert {
   margin-top: 6px; }
-  #contributor #contributor__tool .alert > a {
+  #contributor #contributor__tool .alert a {
     text-decoration: underline;
     cursor: pointer; }
 
