--- a/functions/client/modules/contributor/contributor.scss
+++ b/functions/client/modules/contributor/contributor.scss
@@ -26,7 +26,7 @@
     .alert {
       margin-top: 6px;
 
-      > a {
+      a {
         text-decoration: underline;
         cursor: pointer;
       }
