--- a/functions/client/modules/contributor/ContributeMenu/ContributeMenu.scss
+++ b/functions/client/modules/contributor/ContributeMenu/ContributeMenu.scss
@@ -1,41 +1,18 @@
 #contribute-menu {
   text-align: center;
+  margin-top: 40px;
 
-  h1,
-  h2,
-  h3 {
-    font-weight: 300;
-    letter-spacing: 0.15em;
-  }
+  .card {
 
-  > h1 {
-    font-size: 1.8rem;
-    margin-bottom: 28px;
-  }
+    > .card-body {
 
-  > h2 {
-    font-size: 1.4rem;
-    margin-top: 16px;
-  }
-  
-  > h3 {
-    font-size: 1rem;
-    cursor: pointer;
-  }
-
-  > .contribute-menu__tool {
-    font-size: 1rem;
-    text-transform: uppercase;
-    font-weight: 300;
-    letter-spacing: 2px;
-    cursor: pointer;
-
-    &:hover {
-      text-decoration: underline;
-    }
-
-    &.active {
-      font-weight: initial;
+      > .card-title {
+        text-transform: uppercase;
+        font-weight: 300;
+        letter-spacing: 4px;
+        margin-top: 12px;
+        margin-bottom: 24px;
+      }
     }
   }
 }
