--- a/functions/server/html/Footer/Footer.scss
+++ b/functions/server/html/Footer/Footer.scss
@@ -1,4 +1,19 @@
 #footer {
   position: fixed;
   bottom: 0;
+  width: 100%;  
+  margin-top: 20px;  
+  background: white;  
+  padding-top: 8px;
+
+  > h6 {
+    text-align: center;
+    font-weight: 300;
+    letter-spacing: 3px;
+    font-size: 0.8rem;
+
+    > a {
+      color: black;
+    }
+  }
 }
