--- a/functions/server/styles/home/home.scss
+++ b/functions/server/styles/home/home.scss
@@ -4,7 +4,7 @@
     text-align: center;
     padding-bottom: 20px;
 
-    > p {
+    p {
       text-align: center;
       font-size: 1.2rem;
       font-weight: 300;
