--- a/functions/server/html/Header/Header.scss
+++ b/functions/server/html/Header/Header.scss
@@ -17,6 +17,11 @@
       }
     }
 
+    &:not(:first-child) {
+      font-weight: 300;
+      border-left: solid 1px;
+    }
+
     > a {
       color: black;
       padding-left: 3px;
