improved project arbo

--- a/functions/server/templates/main/main.scss
+++ b/functions/server/templates/main/main.scss
@@ -1,4 +1,4 @@
-@import '../../html/html.scss';
+@import '../../app/html/html.scss';
 @import './buttons/buttons.scss';
 @import './forms/forms.scss';
 
