--- a/functions/server/templates/home/home.scss
+++ b/functions/server/templates/home/home.scss
@@ -4,6 +4,19 @@
     text-align: center;
     padding-bottom: 20px;
 
+    > .container {
+
+      > .row {
+
+        > div {
+
+          > p {
+            height: 7rem;
+          }
+        }
+      }
+    }
+
     p {
       text-align: center;
       font-size: 1.2rem;
