rank parent list

--- a/functions/server/templates/plant/plant.scss
+++ b/functions/server/templates/plant/plant.scss
@@ -1,5 +1,5 @@
 #plant {
 
-  @import './DataList/DataItem/DataItem.scss';
-  @import './DataList/TagList/TagList.scss';
+  @import './DataList/DataList.scss';
+  @import './ParentList/ParentList.scss';
 }
