plant suggestions : in the same rank+ / in the current (subs)

--- a/functions/server/templates/plant/plant.scss
+++ b/functions/server/templates/plant/plant.scss
@@ -2,4 +2,5 @@
 
   @import './DataList/DataList.scss';
   @import './ParentList/ParentList.scss';
+  @import './SectionPlantList/SectionPlantList.scss';
 }
