--- a/functions/server/app/html/Header/Header.scss
+++ b/functions/server/app/html/Header/Header.scss
@@ -1,34 +1,18 @@
 #header {
-  position: absolute;
-  width: 100%;
 
-  > h5 {
+  > a {
+    font-size: 1.2rem;
+    letter-spacing: 4px;
+  }
+
+  .navbar-nav {
     font-size: 1rem;
     letter-spacing: 4px;
-    padding: 8px;
-    transition: background-color ease-out 0.3s;
-    display: inline-block;
-    
-    &:hover {
-      background: black;
+    font-weight: 300;
+    text-align: center;
 
-      > a {
-        color: white;
-      }
-    }
-
-    &:not(:first-child) {
+    > button {
       font-weight: 300;
-      border-left: solid 1px;
-    }
-
-    > a {
-      color: black;
-      padding-left: 3px;
-    }
-
-    &:last-child {
-      float: right;
     }
   }
 }
