--- a/functions/client/modules/contributor/ContributeMenu/ContributeMenu.scss
+++ b/functions/client/modules/contributor/ContributeMenu/ContributeMenu.scss
@@ -12,6 +12,7 @@
         letter-spacing: 4px;
         margin-top: 12px;
         margin-bottom: 24px;
+        text-align: center;
       }
     }
   }
