show author & full extract lineage

--- a/functions/server/templates/plant/plant.scss
+++ b/functions/server/templates/plant/plant.scss
@@ -1,6 +1,7 @@
 #plant {
 
   @import './DataList/DataList.scss';
+  @import './ExtractList/ExtractList.scss';
   @import './ParentList/ParentList.scss';
   @import './SectionPlantList/SectionPlantList.scss';
 }
